# bayesian-modelling-example

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: exploration.ipynb  hierarchical_proper_motions.ipynb  tfd-implementation.ipynb
notebooks/data/: properMotions.csv
notebooks/docs/: NOTES.md  STUDY_GUIDE.MD  STUDY_PLAN.md  STUDY_PLAN_2.md
notebooks/examples/: PEC_Hierarchical_Offsets_TFP.ipynb  proper_motion_analysis.ipynb  pystan_hierarchical.ipynb  pystan_hierarchical_proper_motions.ipynb  tf-probability-example.ipynb
notebooks/examples/other/: PEC_Hierarchical_Offsets_TFP.ipynb  hierarchical_proper_motions.ipynb  proper_motion_analysis.ipynb  pystan_hierarchical_proper_motions.ipynb
notebooks/examples/uned_examples/: 01_InferenciaBayesiana.ipynb  02_Intro_PyMC.ipynb  03_Contraste_hipotesis_vs_inferencia_Bayesiana.ipynb  04_Modelos_jerárquicos_Bayesianos.ipynb  Infer the parameters of a Gaussian from data.ipynb
scripts/: install-pystan.sh
